# ashare-data-warehouse

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.mcp  Dockerfile.web  README.md  audit_tables.py  config.yaml  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  requirements.txt  setup.cfg
.claude/skills/: ashare-data-warehouse.md
docs/: DATA_CATALOG.md  DATA_WAREHOUSE.md  MCP_CLIENT_SETUP.md
src/ingestion/: __main__.py  cli.py  config.py  db.py  em_auth.py  engine.py  mcp_server.py  scheduler.py
src/ingestion/fetchers/: __init__.py  block_trades.py  board_daily.py  capital_flow.py  concept_blocks.py  daily_ohlcv.py  daily_valuation.py  dragon_tiger.py  fundamentals.py  global_markets.py  holder_count.py  hot_reasons.py  hot_stocks.py  indicator_values.py  lockup_calendar.py  margin_trading.py  northbound_flow.py  shareholder_changes.py  stock_classification.py  stock_universe.py  trade_calendar.py  xdxr_events.py
src/ingestion/service/: __init__.py  cache.py  policy.py  service.py
src/ingestion/service/compute/: __init__.py  indicators.py
src/ingestion/service/fetchers/: __init__.py  announcements.py  consensus.py  holders.py  news.py  on_demand.py  realtime_quote.py
src/ingestion/service/writers/: __init__.py  news_writer.py
src/ingestion/web/: __init__.py  routes.py
src/ingestion/web/templates/: base.html  dashboard.html  data.html  mcp.html  schedule.html  search.html  update.html
wheels/: opentdx-0.2.4-py3-none-any.whl
